--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,30 @@
 .read-the-docs {
   color: #888;
 }
+
+div svg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+/* Custom Scrollbar Styles */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px; /* Adjust scrollbar width */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.1); /* Transparent background */
+  border-radius: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3); /* Thumb color with transparency */
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1); /* Optional border for a sleek effect */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.5); /* Slightly brighter on hover */
+}
